RESOLVED FIXED291420
Some Steam webm videos don't play in Safari
https://bugs.webkit.org/show_bug.cgi?id=291420
Summary Some Steam webm videos don't play in Safari
Jean-Yves Avenard [:jya]
Reported 2025-04-11 06:34:38 PDT
I opened the following page in Safari: https://store.steampowered.com/app/962130/Grounded/ The video keeps failing to play, or play but not in fullscreen, load doesn’t play, etc. The same page works fine in Firefox.
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-04-11 06:34:49 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-04-11 06:40:27 PDT
EWS
Comment 3 2025-04-11 22:36:40 PDT
Committed 293620@main (0dec430870a0): <https://commits.webkit.org/293620@main> Reviewed commits have been landed. Closing PR #43950 and removing active labels.
EWS
Comment 4 2025-04-17 07:51:31 PDT
Committed 289651.435@safari-7621-branch (42d31b5db6b4): <https://commits.webkit.org/289651.435@safari-7621-branch> Reviewed commits have been landed. Closing PR #3003 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.